--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@emotion/react": "^11.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@rebass/preset": "^4.0.5",
     "emotion-theming": "^11.0.0",
     "gatsby": "^3.3.1",
@@ -24,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.13",
+    "react-loading-skeleton": "^2.2.0",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
